v1 of hooks for user mods
